# ChangeLog for app-text/freepwing
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/freepwing/ChangeLog,v 1.7 2007/12/25 17:01:58 phreak Exp $

  25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing usata from metadata.xml as per #22931. Assigning to maintainer-needed.

  09 Feb 2007; Diego Pettenò <flameeyes@gentoo.org> ChangeLog:
  Regenerate digest in Manifest2 format.

  22 Sep 2003; <paul@gentoo.org> metadata.xml:
  Fix metadata.xml

*freepwing-1.4.3 (30 Aug 2003)

  18 Sep 2003; Mamoru KOMACHI <usata@gentoo.org> freepwing-1.4.3.ebuild,
  metadata.xml:
  Marked as stable

  30 Aug 2003; Mamoru KOMACHI <usata@gentoo.org> freepwing-1.4.3.ebuild:
  Initial import
