@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST freepwing-1.4.3.tar.gz 129499 RMD160 4ce29620d36eac6e4bf5baa62b785230b2531ba3 SHA1 254e31deac0974cc180efeb6f0691c0d79eb9be6 SHA256 34287268520b622ada5b1390dbec346e586e04509278eb2e3baad67f494f3796
-EBUILD freepwing-1.4.3.ebuild 670 RMD160 6699ce1a15fd4f409c1835faf79b5bcc4b6e25cb SHA1 10487e650686bdca219dcdb3dd1966ca5c940864 SHA256 5449d705eecf0eb27675eb49d328f05592db4f9cd67e774a02316a59e0a3afa1
-MISC ChangeLog 761 RMD160 34c8f5bcaf4e0a27fe665cbeefd3621da5828316 SHA1 4e69bcc4a01cbe38205314982c74132d2e1a4ad7 SHA256 0eba43f1398078751b08f4fcaefa59caa27d4f9cc6f0ebb2585b9babb1d13e95
+EBUILD freepwing-1.4.3.ebuild 666 RMD160 0f238e7b7a280f2fdc9d8699bda4c91a14f4f844 SHA1 eae4a6fbcb9cac434f907be87a542940da7c1c6d SHA256 94b1db8498b6b8d8e7b0718ceb01325e2aefb3f13c9569e395139170e62b627f
+MISC ChangeLog 879 RMD160 5fa0dc61f0b22cef25bb662c7126d26f8540c97a SHA1 6d5323604180c20bd14e7d7d5eed00f6fc9a07b4 SHA256 13c48c048eccc2c819a8352baf9353697f0489aa455b535ef87753f583c2115c
 MISC metadata.xml 236 RMD160 92f49f8275e75caf57b88a3172d5204eaa4e33ae SHA1 dd1a8550a514e55ab0ed6190ab4794bb090994f8 SHA256 56075995f83836ae824c7cb01931b98d6745f6d5a7764299c8262e801486b829
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAks2W3IACgkQV3J2n04EauyjRACgv7LT2KtbQso3nCgOSxwlRGgJ
+Rl0An07xnoApeD/FXwyWbjwodW/MgMRQ
+=lo9U
+-----END PGP SIGNATURE-----
