@@ -1,6 +1,9 @@
 # ChangeLog for app-text/freepwing
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/freepwing/ChangeLog,v 1.7 2007/12/25 17:01:58 phreak Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/freepwing/ChangeLog,v 1.8 2009/12/26 18:52:28 tove Exp $
+
+  26 Dec 2009; Torsten Veller <tove@gentoo.org> freepwing-1.4.3.ebuild:
+  Install perl modules in vendor-dir (#298447)
 
   25 Dec 2007; Christian Heim <phreak@gentoo.org> metadata.xml:
   Removing usata from metadata.xml as per #22931. Assigning to maintainer-needed.
